--- a/profile-card-index.html
+++ b/profile-card-index.html
@@ -12,7 +12,7 @@
 
         </section>
         <section class="middle">
-            <img src="profile-card-component-main/images/image-victor.jpg" alt="Profile Img" class="profileImg">
+            <img src="image-victor.jpg" alt="Profile Img" class="profileImg">
             <p class="profile"><strong class="p1">Victor Crest</strong> 26</p>
             <p class="p2">London</p>
         </section>
